# ice-consciousness

./: .gitignore  README.md  pyproject.toml
src/ice_conscious/domains/: code.py  knowledge.py  logs.py  system.py
src/ice_conscious/embeddings/: adapter.py  models.py
src/ice_conscious/knowledge/: entities.py  graph.py  queries.py  scoring.py  views.py
src/ice_conscious/lifecycle/: awareness.py
src/ice_conscious/memory/: contracts.py  episodic.py  semantic.py  working.py
src/ice_conscious/ml/: anomaly.py  clustering.py  scoring.py
src/ice_conscious/rag/: context_builder.py  pipeline.py  prompts.py  sessions.py
src/ice_conscious/storage/: contracts.py
src/ice_conscious/storage/repositories/: embeddings.py  knowledge.py  memory.py  rag_sessions.py
